2014-03-20 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Do not interpret option default values set to
	  "0" in PPD files as no default setting defined. Thanks to Deng
	  Pang from Ricoh (DengPang at rst dot ricoh dot com) for the report.

2014-01-02 Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-addpjloptions.in: Make foomatic-addpjloptions work with
	  the system's Foomatic database, too.

2013-03-11 Till Kamppeter <till.kamppeter@gmail.com>

	* lib/Foomatic/DB.pm: Error out when initializing the DB object
	  without any form of a Foomatic database being present, made
	  the getpage() method a normal, object-independent function as
	  it does not need a Foomatic database.

	* foomatic-configure.in, foomatic-printjob.in: Updated to use
	  getpage() as a normal function, fixed CUPS check, made
	  foomatic-printjob working without presence of a Foomatic
	  database.

2012-02-15 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/sql/from.pm: Finished support for
	  pulling options from the sql database.

	* ChangeLog: Fixed spacing in last five commit comments.

2012-02-14 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/sql/from.pm: Added support
	  for the option_choice_translation and 
	  options_translation table. Refactored existing code.

2012-02-09 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/sql/from.pm: Added support
	  for the option_choice table.

2012-02-05 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/xml/to.pm, lib/Foomatic/DB.pm:
	  Moved xml generation functionality to filter.

	* lib/Foomatic/DB.pm: Typo fix.

	* lib/Foomatic/filters/xml/to.pm: Fixed indentation.

2012-01-30 Daniel Dressler <danieru.dressler@gmail.com>

	* lib/Foomatic/filters/sql/from.pm: Added initial pull_option()
	  loop. So far only pulls basic data from the sql db.

	* lib/Foomatic/filters/sql/to.pm: Fixed bug where style